syntax = "proto3";

option go_package = "internal/interface/grpc/pb";

package grpc;

service ApiServer {
    rpc Create (CreateApiServerRequest) returns (CreateApiServerResponse);
}

message CreateApiServerRequest {
    string name = 1;
    string desc = 2;
    string createdBy = 3;
    repeated CreateApiServerRequest permissions = 4;
}

message CreateApiServerResponse {
    string ID = 1;
    string name = 2;
    optional string desc = 3;
    string createdBy = 4;
    string slug = 5;
    bool isActive = 6;
    string createdAt = 7;
    string updatedAt = 8;
    repeated PermissionResponse permissions = 9;
}

message CreatePermissionRequest {
    string apiID = 1;
    string apiResource = 2;
    string action = 3;
}

message PermissionResponse {
    string ID = 1;
    string apiID = 2;
    string apiResource = 3;
    string action = 4;
    bool isActive = 5;
    string createdAt = 6;
    string updatedAt = 7;
}